--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Puissance 4</title>
 </head>
+
 <body>
-    
+
+    <h2>Jeu du puissance 4</h2>
+
+    <table id="board">
+
+        <tbody>
+
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+            <tr class="row">
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+                <td class="cell"></td>
+            </tr>
+
+        </tbody>
+
+    </table>
+
+    <div id="playerNames">
+        <p id="player1"></p>
+        <p id="player2"></p>
+    </div>
+
+    <div id="button">
+
+        <button id="play" class="btn btnPlay">Jouer</button>
+
+        <button id="reset" class="btn btnReset">Recommencer</button>
+
+    </div>
+
     <script src="main.js"></script>
 </body>
+
 </html>
